delete attendee endpoint
